// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Team renders Team 1`] = `
<div>
  <div>
    <div
      class="sc-kIPQKe dRlRqH"
    >
      <div
        class="sc-eXEjpC fMVgDL"
      >
        <div
          class="sc-gzOgki iPgKNP"
        >
          <a
            class="sc-iyvyFf gbVIVA"
          >
            <img
              class="sc-hwwEjo iMKlgE"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-kPVwWT iGguRZ"
          >
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-kfGgVZ hzXCUz"
            />
          </div>
        </div>
        <div
          class="sc-ibxdXY byXtiU"
        >
          <h1
            class="sc-RefOD bfgpQk"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-gPEVay gELPVJ"
    >
      <div
        class="sc-jlyJG kqnEeC"
      >
        <div
          class="sc-kkGfuU kijGUW"
        >
          <a
            class="sc-hMqMXs hckUoy"
          >
            <div
              class="sc-hrWEMg jfxsmV"
            >
              <div>
                <img
                  class="sc-kEYyzF bcKbsm"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-iQKALj kMgIFl"
          >
            Cookie M
          </div>
          <div
            class="sc-bwCtUz hCeeNP"
          >
            Cookie master
          </div>
          <div
            class="sc-eTuwsz dkQnUb"
          >
            <a
              class="sc-ckVGcZ bGPoj"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-dxgOiQ kCSnXk"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
        <div
          class="sc-kkGfuU kijGUW"
        >
          <a
            class="sc-hMqMXs hckUoy"
          >
            <div
              class="sc-hrWEMg jfxsmV"
            >
              <div>
                <img
                  class="sc-kEYyzF bcKbsm"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-iQKALj kMgIFl"
          >
            Count van Count
          </div>
          <div
            class="sc-bwCtUz hCeeNP"
          >
            1 ahahah
          </div>
          <div
            class="sc-eTuwsz dkQnUb"
          >
            <a
              class="sc-ckVGcZ bGPoj"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-dxgOiQ kCSnXk"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should handle changing location using keyboard 1`] = `
<div>
  <div>
    <div
      class="sc-kIPQKe dRlRqH"
    >
      <div
        class="sc-eXEjpC fMVgDL"
      >
        <div
          class="sc-gzOgki iPgKNP"
        >
          <a
            class="sc-iyvyFf gbVIVA"
          >
            <img
              class="sc-hwwEjo iMKlgE"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-kPVwWT iGguRZ"
          >
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-kfGgVZ hzXCUz"
            />
          </div>
        </div>
        <div
          class="sc-ibxdXY byXtiU"
        >
          <h1
            class="sc-RefOD bfgpQk"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-gPEVay gELPVJ"
    >
      <div
        class="sc-jlyJG kqnEeC"
      >
        <div
          class="sc-kkGfuU kijGUW"
        >
          <a
            class="sc-hMqMXs hckUoy"
          >
            <div
              class="sc-hrWEMg jfxsmV"
            >
              <div>
                <img
                  class="sc-kEYyzF bcKbsm"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-iQKALj kMgIFl"
          >
            Count van Count
          </div>
          <div
            class="sc-bwCtUz hCeeNP"
          >
            1 ahahah
          </div>
          <div
            class="sc-eTuwsz dkQnUb"
          >
            <a
              class="sc-ckVGcZ bGPoj"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-dxgOiQ kCSnXk"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should handle changing location using mouse 1`] = `
<div>
  <div>
    <div
      class="sc-kIPQKe dRlRqH"
    >
      <div
        class="sc-eXEjpC fMVgDL"
      >
        <div
          class="sc-gzOgki iPgKNP"
        >
          <a
            class="sc-iyvyFf gbVIVA"
          >
            <img
              class="sc-hwwEjo iMKlgE"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-kPVwWT iGguRZ"
          >
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-kfGgVZ hzXCUz"
            />
          </div>
        </div>
        <div
          class="sc-ibxdXY byXtiU"
        >
          <h1
            class="sc-RefOD bfgpQk"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-gPEVay gELPVJ"
    >
      <div
        class="sc-jlyJG kqnEeC"
      >
        <div
          class="sc-kkGfuU kijGUW"
        >
          <a
            class="sc-hMqMXs hckUoy"
          >
            <div
              class="sc-hrWEMg jfxsmV"
            >
              <div>
                <img
                  class="sc-kEYyzF bcKbsm"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-iQKALj kMgIFl"
          >
            Cookie M
          </div>
          <div
            class="sc-bwCtUz hCeeNP"
          >
            Cookie master
          </div>
          <div
            class="sc-eTuwsz dkQnUb"
          >
            <a
              class="sc-ckVGcZ bGPoj"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-dxgOiQ kCSnXk"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should not change using keyboard if not enter or space key 1`] = `
<div>
  <div>
    <div
      class="sc-kIPQKe dRlRqH"
    >
      <div
        class="sc-eXEjpC fMVgDL"
      >
        <div
          class="sc-gzOgki iPgKNP"
        >
          <a
            class="sc-iyvyFf gbVIVA"
          >
            <img
              class="sc-hwwEjo iMKlgE"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-kPVwWT iGguRZ"
          >
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-esjQYD eLRVk"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-kfGgVZ hzXCUz"
            />
          </div>
        </div>
        <div
          class="sc-ibxdXY byXtiU"
        >
          <h1
            class="sc-RefOD bfgpQk"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-gPEVay gELPVJ"
    >
      <div
        class="sc-jlyJG kqnEeC"
      >
        <div
          class="sc-kkGfuU kijGUW"
        >
          <a
            class="sc-hMqMXs hckUoy"
          >
            <div
              class="sc-hrWEMg jfxsmV"
            >
              <div>
                <img
                  class="sc-kEYyzF bcKbsm"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-iQKALj kMgIFl"
          >
            Cookie M
          </div>
          <div
            class="sc-bwCtUz hCeeNP"
          >
            Cookie master
          </div>
          <div
            class="sc-eTuwsz dkQnUb"
          >
            <a
              class="sc-ckVGcZ bGPoj"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-dxgOiQ kCSnXk"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
        <div
          class="sc-kkGfuU kijGUW"
        >
          <a
            class="sc-hMqMXs hckUoy"
          >
            <div
              class="sc-hrWEMg jfxsmV"
            >
              <div>
                <img
                  class="sc-kEYyzF bcKbsm"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-iQKALj kMgIFl"
          >
            Count van Count
          </div>
          <div
            class="sc-bwCtUz hCeeNP"
          >
            1 ahahah
          </div>
          <div
            class="sc-eTuwsz dkQnUb"
          >
            <a
              class="sc-ckVGcZ bGPoj"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-dxgOiQ kCSnXk"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
